# botwenger

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
botwenger/: __init__.py  config.py  dataset.py  features.py  plots.py  preprocessing.py
botwenger/modeling/: predict.py  train.py
data/raw/: liga_cumulative_points_2018_2025.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: biwenger_1_match_points_predictor.json  biwenger_8_match_points_predictor.json
notebooks/: analysis_price_future_points.ipynb  hyperparameter_tuning.ipynb
reports/: alpha_model_results.txt
tests/: test_features.py  test_preprocessing.py
